style(header/footer) improves the positioning of the header, footer, and the visible grids related to them

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,25 +3,34 @@ import Navigation from "./Navigation.astro";
 ---
 
 <header>
-    <nav>
-        <Navigation />
-    </nav>
+  <nav>
+    <Navigation />
+  </nav>
 </header>
 
 <script>
-    window.addEventListener('scroll', () => {
-        const header = document.querySelector('header');
-        // header?.classList.toggle('sticky', window.scrollY > 100);
-    });
+  window.addEventListener("scroll", () => {
+    const header = document.querySelector("header");
+    // header?.classList.toggle('sticky', window.scrollY > 100);
+  });
 </script>
 
-
 <style>
-    header {
-        width: 100%;
-    }
-    
-    /* header.sticky {
+  header {
+    position: relative;
+    width: 100%;
+    overflow-x: clip;
+  }
+
+  nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+  }
+
+  /* header.sticky {
         position: sticky;
         top: 0;
         left: 0;
