--- a/src/layouts/FullScreenLayout.astro
+++ b/src/layouts/FullScreenLayout.astro
@@ -68,6 +68,7 @@ const { title } = Astro.props;
     min-height: 100vh;
     max-height: 100vh;
     overflow: auto;
+    scroll-behavior: smooth;
   }
   code {
     font-family:
