adds aria labels to distinguish the main nav and the about page nav

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import Navigation from "./Navigation.astro";
 ---
 
 <header>
-  <nav>
+  <nav aria-label="main navigation">
     <Navigation />
   </nav>
 </header>
