--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -132,7 +132,7 @@ const roles = [
         </p>
       </div>
 
-      <nav>
+      <nav aria-label="navigation for about page">
         <ul>
           <li>
             <a href="#origin" class="nav-link active"
